First attempt notebook is added

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # If you keep data files in a directory named data/ this will work so that we don't upload a shit ton of data to git
 data/
+.DS_Store
